# geektime-01-rcli

./: .gitignore  Cargo.toml  README.md  cliff.toml  test.http
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64_opts.rs  csv_opts.rs  genpass_opts.rs  gwt_opts.rs  http.rs  mod.rs  text_opts.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  gwt.rs  http_serve.rs  mod.rs  text.rs
