[package]
name = "rcli"
version = "0.1.0"
author = "Jin Xing"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
blake3 = "1.5.1"
clap = { version = "4.5.4", features = ["derive"] }
create = "0.1.0"
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"
serde_json = "1.0.117"
serde_yml = "0.0.10"
zxcvbn = "3.0.1"
